--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="wrapper container">
       <div class="top">
         <button id="settings" class="top__btn heading-h5">Настройка</button>
-        <button class="top__btn heading-h5">Выйти</button>
+        <button class="top__btn heading-h5" id="exit-chat">Выйти</button>
       </div>
       <div class="body-messenger">
         <div id="message-block"></div>
@@ -18,7 +18,7 @@
       <form id="sending">
         <input type="text" placeholder="Сообщение..." id="typingText" />
         <button id="sendingBtn">
-          <img width="20" height="20" src=" assets/img/send-email-svgrepo-com.svg" alt="" />
+          <img width="20" height="20" src="./assets/img/send-email-svgrepo-com.svg" alt="" />
         </button>
       </form>
     </div>
