--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,12 @@
       </div>
       <form id="sending">
         <input type="text" placeholder="Сообщение..." id="typingText" />
+        <ul id="emojiList">
+                            
+        </ul>
+        <button id="emojiSelectorIcon" type="button">
+          <img width="20" height="20" src="./assets/img/emoji-smile-svgrepo-com.svg" alt="" />
+        </button>
         <button id="sendingBtn">
           <img width="20" height="20" src="./assets/img/send-email-svgrepo-com.svg" alt="" />
         </button>
